--- a/doc/paper_ms_method_HSCY1/citation.bib
+++ b/doc/paper_ms_method_HSCY1/citation.bib
@@ -777,3 +777,28 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{KIDS_VIKING-Hildebrant2020,
+       author = {{Hildebrandt}, H. and {K{\"o}hlinger}, F. and {van den Busch}, J.~L. and
+         {Joachimi}, B. and {Heymans}, C. and {Kannawadi}, A. and
+         {Wright}, A.~H. and {Asgari}, M. and {Blake}, C. and {Hoekstra}, H. and
+         {Joudaki}, S. and {Kuijken}, K. and {Miller}, L. and {Morrison}, C.~B. and
+         {Tr{\"o}ster}, T. and {Amon}, A. and {Archidiacono}, M. and
+         {Brieden}, S. and {Choi}, A. and {de Jong}, J.~T.~A. and {Erben}, T. and
+         {Giblin}, B. and {Mead}, A. and {Peacock}, J.~A. and {Radovich}, M. and
+         {Schneider}, P. and {Sif{\'o}n}, C. and {Tewes}, M.},
+        title = "{KiDS+VIKING-450: Cosmic shear tomography with optical and infrared data}",
+      journal = {ap},
+     keywords = {cosmology: observations, gravitational lensing: weak, galaxies: photometry, surveys, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2020,
+        month = jan,
+       volume = {633},
+          eid = {A69},
+        pages = {A69},
+          doi = {10.1051/0004-6361/201834878},
+archivePrefix = {arXiv},
+       eprint = {1812.06076},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...633A..69H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
